
----------------------------------------------------------------------------------------------------------------------------

0.57.0 


New jowidgets version 0.63.0 will be used

----------------------------------------------------------------------------------------------------------------------------

0.58.0 


Features:


Bugfixes:

* Fixed issue #50 https://github.com/jo-source/jo-client-platform/issues/50 Validation Warning persists after undo in BeanTable
* Fixed issue #32 https://github.com/jo-source/jo-client-platform/issues/32 CachedEntityService returns EntityInfo for unknown entities
* Fixed issue #52 https://github.com/jo-source/jo-client-platform/issues/52 Save and Undo shortcuts of default actions will not work with swing implementation


----------------------------------------------------------------------------------------------------------------------------

0.59.0 


Features:

* Fixed issue #59 https://github.com/jo-source/jo-client-platform/issues/59 Allow to configure user confirmation for service layer validation warnings 



Bugfixes:

* Fixed issue #53 https://github.com/jo-source/jo-client-platform/issues/53 Shortcut(CTRL+E) not working for edit in Beantable when popup was not visible before
* Fixed issue #54 https://github.com/jo-source/jo-client-platform/issues/54 User Question Dialog has no title
* Fixes issue #55 https://github.com/jo-source/jo-client-platform/issues/55 BeanMessage in table should be rendered the same way than in detail 
* Fixes issue #56 https://github.com/jo-source/jo-client-platform/issues/56 BeanMessages should be cleared, when undo will be done
* Fixes issue #57 https://github.com/jo-source/jo-client-platform/issues/57 BeanMessagePopupDialog clips messages when message will be added after dialog is visible
* Fixes issue #58 https://github.com/jo-source/jo-client-platform/issues/58 Allow multiple bean validations in service layer 

