@@ -132,5 +132,7 @@ Bugfixes:
 * Fixes issue #56 https://github.com/jo-source/jo-client-platform/issues/56 BeanMessages should be cleared, when undo will be done
 * Fixes issue #57 https://github.com/jo-source/jo-client-platform/issues/57 BeanMessagePopupDialog clips messages when message will be added after dialog is visible
 * Fixes issue #58 https://github.com/jo-source/jo-client-platform/issues/58 Allow multiple bean validations in service layer 
+* Fixes issue #60 https://github.com/jo-source/jo-client-platform/issues/60 ServiceProvider throws ConcurrentModificationException when IServiceProviderHolder is registered 
+
 
 
